<resources>
    <string name="app_name">MovieFindR</string>

    <string name="agence_label">Agence</string>

    <string name="app_error">Oops something went wrong</string>
    <string name="no_movie_found">Aucun film correspondant à la recherche n\'a été trouvé</string>
    <string name="saved">Sauvegardé</string>

    <string name="title_home">Accueil</string>
    <string name="title_favorites">Favoris</string>
    <string name="title_search">Rechercher</string>

    <string name="tab_text_1">A venir</string>
    <string name="tab_text_2">Mieux noté</string>
    <string name="tab_text_3">Populaire</string>

    <string name="movie_poster">Movie poster</string>

    <string name="action_favorite">Ajouter aux favoris</string>
    <string name="action_remove_from_favorites">Enlever des favoris</string>

    <string name="label_overview"><u>Résumé</u></string>
    <string name="label_trailer"><u>Bande-annonce</u></string>
    <string name="trailer_thumbnail">Vignette Bande-annonce</string>
    <string name="play_icon">Icone de lancement</string>

    <string name="no_favorites">Aucun favoris n\'a encore été ajouté !</string>
</resources>
